Update zevra version number